deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: csc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "csc-vanity-wallet-generator-deployment"
  namespace: csc
spec:
  replicas: 5
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: "50%"
      maxSurge: "25%"
  template:
    metadata:
      labels:
        app: "csc-vanity-wallet-generator-app"
        color: green
    spec:
      containers:
        - name: "csc-vanity-wallet-generator"
          image: "whufc4life1/csc-vanity-wallet-generator:b54"
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "csc-vanity-wallet-service-deployment"
  namespace: csc
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: "50%"
      maxSurge: "25%"
  template:
    metadata:
      labels:
        app: "csc-vanity-wallet-service-app"
        color: green
    spec:
      containers:
        - name: wallet-service
          image: "whufc4life1/csc-vanity-wallet-service:b54"
          imagePullPolicy: Always
          ports:
            - name: wallet-service
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 120
            timoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 120
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: csc-vanity-wallet-service
  namespace: csc
spec:
  ports:
    - port: 8080
  selector:
    app: csc-vanity-wallet-service-app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: csc-vanity-wallet-db
  namespace: csc
spec:
  ports:
    - port: 3306
  selector:
    app: csc-vanity-wallet-db
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: csc-vanity-wallet-db
  namespace: csc
spec:
  selector:
    matchLabels:
      app: csc-vanity-wallet-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: csc-vanity-wallet-db
    spec:
      containers:
        - image: whufc4life1/csc-vanity-wallet-db:b54
          name: csc-vanity-wallet-db
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim-csc
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "csc-vanity-wallet-service-ingress"
  namespace: "csc"
  annotations:
    kubernetes.io/ingress.global-static-ip-name: csc-web-ip
spec:
  backend:
    serviceName: "csc-vanity-wallet-service"
    servicePort: 8080
